fix: make owner device tests Java 17 compatible